[release/v0.2-201309] Fix intercom z-index

--- a/src/assets/css/ide.css
+++ b/src/assets/css/ide.css
@@ -6386,7 +6386,7 @@ a.action-link:hover {
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg);
-	z-index: 99;
+	z-index: 70;
 }
 
 #Intercom:hover {
